--- a/index.html
+++ b/index.html
@@ -31,54 +31,54 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <!-- 8-5 -->
-      <div class="row">
-        <div class="hour" id="8" col-md-1>8am</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-8">
+        <div class="hour col-md-1">8am</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="9" col-md-1>9am</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-9">
+        <div class="hour col-md-1">9am</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="10" col-md-1>10am</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-10">
+        <div class="hour col-md-1">10am</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="11"col-md-1>11am</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-11">
+        <div class="hour col-md-1">11am</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="12" col-md-1>12pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-12">
+        <div class="hour col-md-1">12pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="1" col-md-1>1pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-13">
+        <div class="hour col-md-1">1pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="2" col-md-1>2pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-14">
+        <div class="hour col-md-1">2pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="3" col-md-1>3pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-15">
+        <div class="hour col-md-1">3pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="4" col-md-1>4pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-16">
+        <div class="hour col-md-1">4pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
-      <div class="row">
-        <div class="hour" id="5" col-md-1>5pm</div>
-        <input class="description col-md-10" type="text"></input>
+      <div class="row time-block" id="hour-17">
+        <div class="hour col-md-1">5pm</div>
+        <textarea class="description col-md-10"></textarea>
         <button class='btn saveBtn col-md-1'><i class='fas fa-save'></i></button>
       </div>
     </div>
